Fix: update letter spacing for header title

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,7 +48,7 @@ h1, h2, h3, h4 {
 .navbar-brand {
     font-family: 'Brexon', serif;
     font-size: 1.5rem;
-    letter-spacing: 3px;
+    letter-spacing: -1px;
     color: var(--brown);
     display: flex;
 }
